# Scientific-Computing-Toolkit

./: README.md  pyproject.toml
examples/: demo.py
src/engutils/: __init__.py  beams.py  fluids.py  materials.py  thermo.py  units.py
src/numethods/: __init__.py  integrate.py  interpolate.py  linalg.py  ode.py  optimize.py  roots.py
tests/: test_engutils.py  test_numethods.py
