[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "numethods"
version = "0.1.0"
description = "Pure-Python numerical methods: root finding, linear algebra, ODEs, integration, interpolation, optimization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daniel" }]
keywords = ["numerical-methods", "scientific-computing", "ode", "quadrature"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
